# frypto

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  todo.md  tox.ini  upload.sh
.github/workflows/: docs.yml
docs/: conf.py  frypto.rst  index.rst  modules.rst
frypto/: __init__.py  allfeatures.py  ewma.py  feature_engineering.py  helpers.py  momentum.py  price.py  trend_features.py  utils.py  volatility.py  volume.py
notebooks/: Exploring_Individual_Features.ipynb  Getting_Started_with_Frypto.ipynb  crypto-feature-engineering-29m-rows-in-8-minutes.ipynb
tests/: test_design.ipynb  test_lag_rolling.py  test_momentum.py  test_price.py  test_rename.bash  test_trend_features.py  test_volatility.py  test_volume.py
