[metadata]
name = frypto
version = 0.1.0
description = Crypto data feature engineering package.
long_description = file: README.md
long_description_content_type = text/markdown
author = Abderlahman Elsayed
author_email = bedoelsayed785@gmail.com
license = MIT License
keywords = feature engineering, cryptocurrency, crypto, time-series, technical indicators, data preprocessing, financial data, machine learning, trading, blockchain, RSI, MACD, moving average, price prediction, volatility, momentum indicators, data analysis, yfinance
url = https://github.com/NotAbdelrahmanelsayed/frypto
project_urls =
    Repository = https://github.com/NotAbdelrahmanelsayed/frypto
    Issues = https://github.com/NotAbdelrahmanelsayed/frypto/issues

[options]
packages = find:
install_requires =
    pandas
    numpy
    scipy
    numba

[options.packages.find]
where = .
